<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/hiCarTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="142dp"
        android:textColor="@color/primary"
        android:textSize="64sp"
        android:text="@string/hi_car_title_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/viewBg"
        android:layout_width="820dp"
        android:layout_height="360dp"
        android:background="@drawable/connect_code_layout_bg"
        android:layout_marginTop="@dimen/dp.110"
        app:layout_constraintTop_toBottomOf="@id/hiCarTitleTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/phoneIv"
        android:layout_width="@dimen/dp.48"
        android:layout_height="@dimen/dp.66"
        android:src="@drawable/icon_phone"
        android:layout_marginTop="@dimen/dp.46"
        app:layout_constraintTop_toTopOf="@id/viewBg"
        app:layout_constraintStart_toStartOf="@id/viewBg"
        app:layout_constraintEnd_toEndOf="@id/viewBg" />

    <TextView
        android:id="@+id/disconnectDeviceNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textColor="@color/primary"
        android:layout_marginTop="@dimen/dp.22"
        app:layout_constraintTop_toBottomOf="@id/phoneIv"
        app:layout_constraintStart_toStartOf="@id/viewBg"
        app:layout_constraintEnd_toEndOf="@id/viewBg"
        tools:text="HUAWEI P100 Pro Max Ultra Plus" />
    <com.zeekr.component.button.ZeekrButton
        android:id="@+id/disconnectDeviceButton"
        style="@style/Widget.ZeekrButton.Primary"
        android:layout_width="240dp"
        android:layout_height="@dimen/dp.86"
        android:text="@string/disconnect"
        android:layout_marginTop="@dimen/dp.28"
        app:layout_constraintTop_toBottomOf="@id/disconnectDeviceNameTV"
        app:layout_constraintStart_toStartOf="@id/viewBg"
        app:layout_constraintEnd_toEndOf="@id/viewBg" />

    <TextView
        android:id="@+id/noticeLine1"
        style="@style/HiCarNotice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manually_disconnect"
        android:layout_marginTop="@dimen/dp.80"
        app:layout_constraintTop_toBottomOf="@id/viewBg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/noticeLine2"
        style="@style/HiCarNotice"
        android:textColor="@color/primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_leave_disconnect"
        android:layout_marginTop="@dimen/dp.8"
        app:layout_constraintTop_toBottomOf="@id/noticeLine1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.zeekr.component.button.ZeekrButton
        android:id="@+id/pinCloseButton"
        style="@style/Widget.ZeekrButton.Minor"
        android:layout_width="440dp"
        android:layout_height="108dp"
        android:layout_marginTop="162dp"
        android:text="@string/close"
        android:textSize="@dimen/helper.sp.36"
        app:backgroundTint="@color/connection_code_layout_bg"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noticeLine2"
        />
</androidx.constraintlayout.widget.ConstraintLayout>