<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="360dp"
    android:background="@drawable/connect_code_layout_bg"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!--控制控件整体高度 -->
    <Space
        android:id="@+id/viewHeightSpace"
        android:layout_width="1dp"
        android:layout_height="360dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <!--连接失败 -->
    <ImageView
        android:id="@+id/failedIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_notice_icon"
        android:layout_marginTop="@dimen/dp.50"
        app:layout_constraintEnd_toStartOf="@+id/failedSpace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewHeightSpace"
        app:layout_constraintHorizontal_chainStyle="packed"
        />
    <Space
        android:id="@+id/failedSpace"
        android:layout_width="@dimen/dp.16"
        android:layout_height="40dp"
        app:layout_constraintEnd_toStartOf="@+id/failedTV"
        app:layout_constraintStart_toEndOf="@+id/failedIV"
        app:layout_constraintTop_toTopOf="@id/failedIV"
        app:layout_constraintBottom_toBottomOf="@id/failedIV"/>
    <TextView
        android:id="@+id/failedTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        android:textSize="44sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/failedSpace"
        app:layout_constraintTop_toTopOf="@id/failedIV"
        app:layout_constraintBottom_toBottomOf="@id/failedIV"
        android:text="@string/app_connect_fail_manual"
        />
    <!--获取连接码失败 CONNECTION_CODE_GET_FAILED-->
    <TextView
        android:id="@+id/errorLine1"
        style="@style/HiCarNotice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:gravity="center_vertical"
        android:text="@string/connect_manual_notice"
        app:layout_constraintTop_toBottomOf="@id/failedTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/errorLine2"
        style="@style/HiCarNotice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="@string/connect_exit_notice"
        app:layout_constraintTop_toBottomOf="@id/errorLine1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.constraintlayout.widget.Group
        android:id="@+id/connectFailedGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="failedIV,failedSpace,failedTV,errorLine1,errorLine2"
        />
</merge>